# psqlc

./: .env  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  backup.reg  build.bat  dev.py  prod.gitignore  psqlc.py  psqlc.py.0  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  changelog.rst  commands.rst  conf.py  configuration.rst  contributing.rst  examples.rst  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/api/: modules.rst
gitignore_backup/: original_prod.backup
psqlc-1.1.19/: pyproject.toml
