[build-system]
requires = [ "setuptools>=70", "wheel", "cython>=3.0",]
build-backend = "setuptools.build_meta"

[project]
name = "psqlc"
version = "1.1.6"
description = "A production-ready, feature-rich CLI tool for managing PostgreSQL databases with beautiful formatting and smart auto-detection"
readme = "README.md"
requires-python = ">=3.6"
keywords = [ "postgresql", "automation", "analytics", "developer tools", "monitoring", "devops", "django", "envdot", "env",]
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "Topic :: System :: Filesystems", "Topic :: Software Development :: Build Tools", "Environment :: Console", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11",]
dependencies = [ "rich", "asyncpg", "licface", "envdot", "pwinput",]
[[project.authors]]
name = "Hadi Cahyadi"
email = "cumulus13@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/cumulus13/psqlc"
BugTracker = "https://github.com/cumulus13/psqlc/issues"
Source = "https://github.com/cumulus13/psqlc"
Documentation = "https://psqlc.readthedocs.io"

[project.scripts]
psqlc = "psqlc.psqlc:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
psqlc = [ "*.so", "*.pyd", "*.png",]

[tool.setuptools.packages.find]
include = [ "psqlc",]

[tool.setuptools.ext-modules."psqlc.psqlc"]
sources = [ "psqlc/psqlc.pyx",]
extra-compile-args = [ "-O3",]

[tool.setuptools.ext-modules."psqlc.psqlc".cython-directives]
language_level = "3"
boundscheck = false
wraparound = false
embedsignature = true
