[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psqlc"
version = "1.1.6"
description = "Feature-rich command-line interface tool for managing PostgreSQL databases. Built with `asyncpg` and featuring beautiful output formatting with Rich, it provides intelligent auto-detection of database configurations from Django settings, environment files, and various configuration formats."
readme = "README.md"
readme-content-type = "text/markdown"

authors = [
    { name = "cumulus13", email = "cumulus13@gmail.com" }
]

requires-python = ">=3.6"
license = { text = "MIT" }

keywords = [
    "postgresql",
    "automation",
    "analytics",
    "developer tools",
    "monitoring",
    "devops"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Filesystems",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: Console"
]

dependencies = [
    "rich",
    "asyncpg",
    "licface",
    "envdot",
    "pwinput"
]

[project.scripts]
psqlc = "psqlc.psqlc:main"

[project.urls]
Homepage = "https://github.com/cumulus13/psqlc"
Source = "https://github.com/cumulus13/psqlc"
Bug Reports = "https://github.com/cumulus13/psqlc/issues"
Documentation = "https://psqlc.readthedocs.io"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["psqlc"]

[tool.setuptools.package-data]
psqlc = ["*.png", "*.so", "*.pyd"]
